Video: Support MJPEG rtps streams